--- a/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/personalBook.css
+++ b/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/personalBook.css
@@ -23,14 +23,25 @@
 }
 .personalBook-price{
     position: absolute;
-    top: 10px;
+    top: 15px;
     color: black;
     font-size: 16px;
     background-color: aliceblue;
     padding: 5px;
     padding-left: 20px;
     padding-right: 20px;
-    border-radius: 12px;
+    border-radius: 6px;
+    z-index: 100;
+}
+
+.admin-price-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+}
+.admin-price-container input {
+    border: none;  
 }
 
 @media(min-width: 768px){
@@ -63,6 +74,9 @@
     .personalBook-container .section-agendaText-container {
         grid-area: c3;
     }
-
+    .section2 {
+        display: flex;
+        flex-direction: row-reverse;
+    }
 
 }
