se agrega animaciones, estilos, cambios en UI/UX, seccion de contacto y se actualizan datos de los cuadros

--- a/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/agendas.css
+++ b/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/agendas.css
@@ -81,7 +81,9 @@ form button {
     width: 250px;
     align-items: center;
     justify-content: space-between;
-    
+}
+#btnSubmitAgenda {
+    padding: 8px;
 }
 .formContainer form input[type="color"] {
     width: 250px;
