--- a/proyect/Landing-page-mobileFirst/src/LandingPage.css
+++ b/proyect/Landing-page-mobileFirst/src/LandingPage.css
@@ -110,6 +110,7 @@ nav li {
     top: calc(70px);
     /* Adjust according to your navbar height */
     left: 50%;
+    overflow: hidden;
     transform: translateX(-50%);
     background-color: rgb(240, 248, 255);
     width: 300px;
@@ -122,6 +123,7 @@ nav li {
     -webkit-box-shadow: 1px 22px 34px 0px rgba(163, 6, 240, 0.75);
     -moz-box-shadow: 1px 22px 34px 0px rgba(163, 6, 240, 0.75);
 }
+
 
 
 .displayMenu li {
@@ -209,7 +211,6 @@ a {
     color: aliceblue;
     padding: 8px;
     font-size: 16px;
-    transition: all 200ms ease-in-out;
 }
 
 
@@ -232,7 +233,6 @@ a {
     justify-content: center;
     align-items: center;
     width: 80%;
-    text-align: justify;
     line-height: 2;
     margin-top: 32px;
 }
@@ -257,9 +257,8 @@ a {
 }
 
 .firstSection h3 {
-    font-family: "Dancing Script";
-    font-size: 35px;
-    margin-top: -15px;
+    font-size: 2rem;
+    font-family: "Dancing script";
     text-align: center;
 }
 
@@ -299,7 +298,7 @@ a {
 .secondSectionInfo h2,
 .titleAgendas {
     margin-top: 10px;
-    font-size: 30px;
+    font-size: 2rem;
     font-family: "Dancing Script";
     text-align: center;
 }
@@ -435,11 +434,6 @@ footer p {
     padding: 10px;
 }
 
-.btnMyPaintings:hover {
-    transform: scale(1.05);
-    background-color: rgb(152, 42, 255);
-}
-
 .firstSectionContainer,
 #firstSection-container2,
 section,
@@ -508,12 +502,12 @@ video {
 /* Define the slide-in animation */
 @keyframes slideInFromSide {
     0% {
-        transform: translateX(100%); /* Start from outside the screen */
-        opacity: 0; /* Start invisible */
+        transform: translateX(100%);
+        opacity: 0; 
     }
     100% {
-        transform: translateX(0); /* End at its original position */
-        opacity: 1; /* End visible */
+        transform: translateX(0); 
+        opacity: 1;
     }
 }
 
@@ -775,10 +769,6 @@ textarea {
     }
     .firstSection-info div{
         font-size: 24px;
-        width: 600px;
-    }
-    .firstSection-info .flex-column {
-        gap: 0px;
     }
 
     .firstSection-container {
@@ -789,17 +779,17 @@ textarea {
     }
 
     .firstSection-container img {
-        width: 30%;
+        width: 40%;
         height: 40%;
     }
 
     .firstSection-container h3 {
-        font-size: 80px;
+        font-size: 4rem;
+        text-align: left;
     }
 
     .firstSection-container p {
-        font-size: 32px;
-        text-align: justify;
+        font-size: 2rem;
     }
 
     #firstSection-container2 {
