enhance UX/UI, fix bugs, add styles, handle errors in agenda forms

--- a/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/agendas.css
+++ b/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/agendas.css
@@ -311,7 +311,14 @@ form button {
 }
 
 .encargar {
-    margin: 2rem;
+    margin-top: 3rem;
+    width: 80%;
+}
+
+.preview-text {
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
 }
 
 
