--- a/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/paintings.css
+++ b/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/paintings.css
@@ -1,7 +1,7 @@
-
 h1 {
     text-align: center;
 }
+
 .myPaintingsTitle {
     margin: 1rem;
     font-size: 40px;
@@ -18,9 +18,11 @@ h1 {
     font-size: 40px;
     transition: all 200ms ease-in-out;
 }
+
 .dot:hover {
     color: rgb(174, 126, 219);
 }
+
 .dot:active {
     color: blueviolet;
 }
@@ -30,10 +32,12 @@ h1 {
     height: 100%;
     border-radius: 10px 10px 0 0;
     object-fit: cover;
-   
+
 }
+
 .paintingCard {
     display: flex;
+    position: relative;
     flex-direction: column;
     margin: 10%;
     margin-top: 3%;
@@ -47,11 +51,13 @@ h1 {
     padding-bottom: 20px;
     overflow: auto;
 }
+
 .paintingContainer h1 {
     font-size: 25px;
     margin-top: 5px;
     text-align: start;
 }
+
 .paintingContainer p {
     width: 245px;
     border-top: 2px solid blueviolet;
@@ -59,13 +65,16 @@ h1 {
     margin-top: 6px;
     text-align: justify;
 }
+
 .paintingInfoContainer {
     text-align: start;
     margin-left: 10%;
 }
+
 .paintingInfoContainer p {
     color: rgb(136, 136, 136);
 }
+
 .btnPriceContainer {
     margin-top: 20px;
     display: flex;
@@ -74,11 +83,13 @@ h1 {
     margin-left: 10%;
     margin-right: 10%;
 }
+
 .btnPriceContainer h3 {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
+
 .btnPriceContainer .addToCart {
     background-color: blueviolet;
     padding: 8px;
@@ -86,9 +97,11 @@ h1 {
     border: none;
     border-radius: 6px;
 }
+
 .hideInOffer {
     display: none;
 }
+
 .showInOffer {
     display: block;
     position: absolute;
@@ -98,11 +111,13 @@ h1 {
     border-radius: 5px;
     padding: 3px;
 }
+
 .showInOffer p {
     letter-spacing: 3px;
     margin-left: 3px;
     font-family: "Raleway", sans-serif;
 }
+
 .seeMoreBtn {
     background-color: transparent;
     font-size: 11px;
@@ -127,9 +142,10 @@ h1 {
     height: 20px;
     font-size: 40px;
 }
+
 .sectionPaintingInfo {
     margin-top: 32px;
-}   
+}
 
 /*CHOOSE PAINTING STYLES*/
 
@@ -140,6 +156,7 @@ h1 {
     align-items: center;
     margin: 4%;
 }
+
 .choose-container {
     display: flex;
     flex-direction: column;
@@ -149,6 +166,7 @@ h1 {
     width: 250px;
     border-radius: 6px;
 }
+
 .choosePainting-button-container {
     display: flex;
     flex-direction: column;
@@ -157,8 +175,10 @@ h1 {
     gap: 1rem;
     margin-top: 5%;
 }
+
 .choosePainting-button-container button {
-    width: 200px; /* Ancho fijo */
+    width: 200px;
+    /* Ancho fijo */
     padding: 10px 20px;
     text-align: center;
     border: none;
@@ -167,84 +187,102 @@ h1 {
     background-color: blueviolet;
     transition: all 200ms ease-in-out;
 }
+
 .choosePainting-button-container button:hover {
     transform: scale(1.03);
     background-color: rgb(163, 74, 247);
 }
+
 #btnPainting {
     margin-bottom: 2rem;
     font-size: 24px;
     transition: all 200ms ease-in-out;
 }
+
 #btnPainting:hover {
     background-color: rgb(154, 77, 226);
     transform: scale(1.1);
 }
 
 
-
-
-
-
 /*DESKTOP STYLES*/
 
-@media(min-width: 768px){
-    #btnPainting { 
+@media(min-width: 768px) {
+    #btnPainting {
         font-size: 3rem;
     }
+
     .cuadro {
         display: flex;
         align-items: flex-start;
         height: fit-content;
     }
+
+
     .paintingsColumn {
         width: 1250px;
         margin: 20px auto;
         columns: 3;
         column-gap: 12px;
     }
+
     .sectionPaintingInfo {
         display: flex;
         justify-content: center;
         align-items: flex-start;
     }
+
     .sectionPaintingInfo .paintingCard {
         display: flex;
         flex-direction: row;
         overflow: hidden;
     }
+    .paintingCard:hover {
+        cursor: pointer;
+        transform: scale(1.02);
+        transition: all 200ms;
+    }
+
     .sectionPaintingInfo .paintingContainer {
         display: flex;
         flex-direction: column;
     }
+
     .paintingCard img {
         display: block;
         width: 100%;
         height: auto;
         object-fit: cover;
     }
+
     .sectionPaintingInfo img {
         height: 400px;
         width: auto;
     }
+
     .showInOffer {
         position: absolute;
         left: 0;
     }
+
     .choosePainting {
         margin: 4%;
     }
+
     .paintingContainer p {
         width: 260px;
     }
+
     .choosePainting-button-container {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
     }
+
     .choose-container {
         width: 700px;
     }
+
     .choosePainting-button-container button {
         width: 350px;
         font-size: 24px;
