--- a/proyect/Landing-page-mobileFirst/src/LandingPage.css
+++ b/proyect/Landing-page-mobileFirst/src/LandingPage.css
@@ -9,16 +9,17 @@
     border-right: 3px solid transparent;
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
-  }
-  
-  @keyframes rotation {
+}
+
+@keyframes rotation {
     0% {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
+
     100% {
-      transform: rotate(360deg);
+        transform: rotate(360deg);
     }
-  } 
+}
 
 /*APP*/
 body {
@@ -37,7 +38,7 @@ body {
 }
 
 nav {
-    height: 70px;
+    height: 60px;
     background-color: rgba(240, 248, 255, 0.836);
     position: sticky;
     top: 0;
@@ -62,11 +63,11 @@ nav {
 
 .navLogo h1 {
     font-family: "Dancing Script", cursive;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .navLogo h2 {
-    font-size: 15px;
+    font-size: 12px;
     color: blueviolet;
     font-family: "Dancing Script";
 }
@@ -107,7 +108,7 @@ nav li {
 
 .displayMenu {
     position: fixed;
-    top: calc(70px);
+    top: calc(60px);
     /* Adjust according to your navbar height */
     left: 50%;
     overflow: hidden;
@@ -345,7 +346,8 @@ a {
 
 /*FOOTER*/
 
-footer, .titleBg {
+footer,
+.titleBg {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -353,6 +355,7 @@ footer, .titleBg {
     background: rgb(132, 63, 251);
     background: radial-gradient(circle, rgba(132, 63, 251, 1) 0%, rgba(250, 70, 252, 1) 100%);
 }
+
 .titleBg {
     height: 60px;
     background: url('../src/components/imgs/BG2.jpg') no-repeat center center / cover;
@@ -465,7 +468,23 @@ video {
     width: 100%;
 }
 
-.paintingContainerSlider, .paintingImgs-section, .father-paintingsSection {
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom,
+            rgba(0, 0, 0, 0.3) 0%,
+            rgba(0, 0, 0, 0.7) 50%,
+            rgba(0, 0, 0, 0.3) 100%);
+}
+
+
+.paintingContainerSlider,
+.paintingImgs-section,
+.father-paintingsSection {
     margin-top: 32px;
     view-timeline-name: none;
     animation-name: none;
@@ -481,12 +500,14 @@ video {
     columns: 2;
     column-gap: 12px;
 }
+
 .paintingImgs-section img {
     max-width: 100%;
     height: 100% auto;
     border-radius: 16px;
     transition: all 200ms ease-in-out;
 }
+
 .paintingImgs-box {
     margin-top: 10px;
     width: inherit;
@@ -496,17 +517,20 @@ video {
 .paintingImgs-section img:hover {
     transform: scale(1.03);
 }
+
 .my-icon {
     color: aliceblue;
 }
+
 /* Define the slide-in animation */
 @keyframes slideInFromSide {
     0% {
         transform: translateX(100%);
-        opacity: 0; 
+        opacity: 0;
     }
+
     100% {
-        transform: translateX(0); 
+        transform: translateX(0);
         opacity: 1;
     }
 }
@@ -524,19 +548,21 @@ video {
     right: 0px;
     font-size: 24px;
     width: 40px;
-    animation: slideInFromSide 1s ease-in-out; /* Apply the animation */
+    animation: slideInFromSide 1s ease-in-out;
+    /* Apply the animation */
 }
 
 /* Additional styles for hover effect (optional) */
 .scrollToTopBtn:hover {
-    background: rgba(0, 0, 0, 0.6); /* Darker background on hover */
+    background: rgba(0, 0, 0, 0.6);
+    /* Darker background on hover */
 }
 
 .linkTo-aboutMe-btn {
     display: flex;
     align-items: center;
     background-color: transparent;
-    padding: 6px; 
+    padding: 6px;
     border-radius: 6px;
     border: 2px solid black;
     color: black;
@@ -544,10 +570,12 @@ video {
     padding-right: 12px;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
+
 .linkTo-aboutMe-btn:hover {
     transform: scale(1.03);
     background-color: rgba(0, 0, 0, 0.11);
 }
+
 .linkTo-aboutMe-btn .showSeeMore {
     opacity: 0;
     width: 16px;
@@ -561,21 +589,26 @@ video {
     opacity: 1;
     transform: translateX(0);
 }
+
 #firstSection-container2 .showSeeMore {
     width: 16px;
     height: 16px;
 }
+
 textarea {
     resize: none;
 }
+
 .seeMorePaintings {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .btnMyPaintings img {
     display: block;
 }
+
 .btnMyPaintings {
     display: flex;
     justify-content: center;
@@ -609,9 +642,11 @@ textarea {
     background: url('../src/components/imgs/BG2.jpg') no-repeat center center / cover;
     margin-top: 3rem;
 }
+
 .footer-navbar .navbar img {
     display: none;
 }
+
 .footer-navbar .navbar {
     display: flex;
     justify-content: center;
@@ -621,6 +656,7 @@ textarea {
     background-color: transparent;
     color: aliceblue;
 }
+
 .footer-navbar a:hover {
     color: rgba(137, 43, 226, 0.596);
 }
@@ -635,9 +671,11 @@ textarea {
     gap: 20px;
     margin: 2rem;
 }
+
 .envioSection img {
     width: 30px;
 }
+
 .envioSection span {
     color: blueviolet;
 }
@@ -658,9 +696,11 @@ textarea {
     .envioSection img {
         width: 40px;
     }
+
     .envioSection {
         font-size: 30px;
     }
+
     .footer-navbar .navbar {
         display: flex;
         flex-direction: row;
@@ -668,19 +708,22 @@ textarea {
         background-color: transparent;
         color: aliceblue;
     }
+
     .footer-navbar {
         height: 250px;
         background: url('../src/components/imgs/BG2.jpg') no-repeat center center / cover;
     }
+
     .socialMedia-section {
         margin-bottom: 0px;
     }
+
     button:hover {
         cursor: pointer;
     }
 
     nav {
-        height: 70px;
+        height: 60px;
         padding: 10px;
         padding-left: 40px;
         z-index: 9999;
@@ -710,6 +753,7 @@ textarea {
         display: flex;
         align-items: center;
     }
+
     .closedMenu li {
         font-size: 14px;
     }
@@ -738,10 +782,11 @@ textarea {
         overflow: hidden;
         position: relative;
     }
-   
+
     .slider img {
         display: none;
     }
+
     .btnMyPaintings {
         display: flex;
         justify-content: center;
@@ -750,6 +795,7 @@ textarea {
         padding: 12px;
         padding-right: 0px;
     }
+
     .btnMyPaintings img {
         display: block;
         transform: scale(1.2);
@@ -777,7 +823,8 @@ textarea {
         flex-direction: column;
         gap: 50px;
     }
-    .firstSection-info div{
+
+    .firstSection-info div {
         font-size: 24px;
     }
 
@@ -883,6 +930,7 @@ textarea {
         left: 50%;
         transform: translate(-50%, -50%);
     }
+
     .paintingImgs-section {
         width: 1200px;
         margin: 20px auto;
@@ -890,21 +938,24 @@ textarea {
         columns: 3;
         column-gap: 30px;
     }
+
     .paintingImgs-section img {
         max-width: 100%;
         height: 100%;
         border-radius: 16px;
     }
+
     .paintingImgs-box {
         margin-top: 10px;
     }
+
     .agendaContainer img {
         border: none;
         width: 100%;
         margin-bottom: 10px;
         height: 100%;
     }
-    
+
     .agendaContainer {
         background-color: rgba(137, 43, 226, 0.274);
         border-radius: 16px;
