Agrego seccion de contacto y cambio algunos estilos

--- a/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/agendas.css
+++ b/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/agendas.css
@@ -191,7 +191,7 @@ form button {
     padding-bottom: 20px;
 }
 .section-agendaText-container p {
-    line-height: 40px;
+    line-height: 2;
 }
 .section-agendaText-flex-column {
     display: flex;
