--- a/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/customPainting.css
+++ b/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/customPainting.css
@@ -68,7 +68,7 @@
     gap: 12px;
     margin: 5%;
     text-align: center;
-    line-height: 32px;
+    line-height: 2;
     padding: 16px;
     border-top: 2px solid blueviolet;
     border-bottom: 2px solid blueviolet;
