--- a/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/personalBook.css
+++ b/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/personalBook.css
@@ -21,17 +21,22 @@
     font-family: "Dancing Script", cursive;
     font-size: 32px;
 }
+
+.personalBook-price h4 {
+    font-family: "Raleway", sans-serif;
+    text-align: center;
+}
+
 .personalBook-price{
+    
     position: absolute;
-    top: 15px;
-    color: black;
-    font-size: 16px;
-    background-color: aliceblue;
-    padding: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 6px;
-    z-index: 100;
+    top: 4px;
+    color: rgb(255, 255, 83);
+    font-size: 20px;
+    background-color: rgba(184, 29, 29, 0.842);
+    padding: 6px 20px;
+    border-radius: 8px;
+    z-index: 1;
 }
 
 .admin-price-container {
