--- a/proyect/Landing-page-mobileFirst/src/components/contact/styles/ContactForm.css
+++ b/proyect/Landing-page-mobileFirst/src/components/contact/styles/ContactForm.css
@@ -4,6 +4,10 @@
     flex-direction: column;
     gap: 1rem;
   }
+
+  .contact-form input, .contact-form textarea {
+    background-color: white;
+  }
   
   .form-group {
     display: flex;
