--- a/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/laminas.css
+++ b/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/laminas.css
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    gap: 1rem;
 }
 .laminasContainer {
     display: flex;
