--- a/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/paintings.css
+++ b/proyect/Landing-page-mobileFirst/src/pages/pagesStyles/paintings.css
@@ -340,15 +340,15 @@ h1 {
     .choosePainting-button-container {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
     }
 
     .choose-container {
-        width: 700px;
+        width: fit-content;
     }
 
     .choosePainting-button-container button {
-        width: 350px;
+        padding-left: 1rem;
+        padding-right: 1rem;
         font-size: 24px;
         font-weight: bold;
     }
