--- a/proyect/Landing-page-mobileFirst/src/LandingPage.css
+++ b/proyect/Landing-page-mobileFirst/src/LandingPage.css
@@ -23,14 +23,14 @@
 
 /*APP*/
 body {
-    overflow: hidden;
+    overflow-x: hidden;
     min-height: 100vh;
     overscroll-behavior: none;
 }
 
 html {
     overscroll-behavior: none;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 * {
