--- a/proyect/Landing-page-mobileFirst/src/LandingPage.css
+++ b/proyect/Landing-page-mobileFirst/src/LandingPage.css
@@ -230,7 +230,8 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 8px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     gap: 1rem;
 }
 
@@ -322,14 +323,14 @@ a {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-bottom: 40px;
-    margin-top: 30px;
-    gap: 20px;
+    margin-bottom: 4rem;
+    margin-top: 2rem;
+    gap: 0.5rem;
 }
 
 .socialMedia-container ul {
     display: flex;
-    gap: 30px;
+    gap: 2rem;
 
 }
 
@@ -338,7 +339,7 @@ a {
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    padding: 5px;
+    padding: 0.5rem;
     list-style-type: none;
 
 }
@@ -441,11 +442,7 @@ footer p {
 
 #firstSection-container2,
 .titleAgendas,
-.secondSection,
-.secondSectionInfo,
 .viewOnInstagram,
-.socialMedia-container,
-.socialMedia-section,
 .cuadro,
 .paintingImgs-box {
     view-timeline-name: --reveal;
