--- a/proyect/Landing-page-mobileFirst/src/index.css
+++ b/proyect/Landing-page-mobileFirst/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
 
@@ -13,3 +13,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+button {
+  color: white;
+}
